# internal/framework/routes/QuestionnaireRoutes.go
@@ -7,8 +7,10 @@ import (
 )
 
 func NewQuestionnaireRoutes(e *echo.Echo, ucon *controller.QuestionnaireController, middleware ...echo.MiddlewareFunc) {
+	e.GET("/dashboard", ucon.AvailableQuest, middleware...)
 	group := e.Group("/questionnaire", middleware...)
 	group.GET("", ucon.ListMyQuestionnaire)
+	group.GET("/:id", ucon.ViewQuestByID)
 	group.POST("", ucon.CreateQuestionnaire)
 	group.PUT("/:id/update", ucon.UpdateQuestionnaire)
 	group.DELETE("/:id/delete", ucon.DeleteQuestionnaire)
